--- a/Password List.ipynb
+++ b/Password List.ipynb
@@ -20,15 +20,26 @@
     }
    ],
    "source": [
+    "# first, we'll make up sme test passwords and put them in a list\n",
     "test_passwords = ['password', '1234', 'broncos', 'yoda', 'swimmer', 'batman', 'flash']\n",
+    "# next, we'll create a list that will hold easily guessed passwords. We will\n",
+    "# include the empty string as a first entry\n",
     "bad_passwords = ['']\n",
+    "# for each line in a file we opened and read, do the following\n",
     "for line in open('500-worst-passwords.txt'):\n",
+    "    # remove the character '\\n' if there and assign it to the variable line. \n",
+    "    # note this only works because the python program always reads the right\n",
+    "    # hand side of the equals sign before assigning it to the left\n",
+    "    # btw, '\\n' is better known as a carriage return\n",
     "    line = line.strip('\\n')\n",
+    "    # add our cleaned up line to the bad_passwords list\n",
     "    bad_passwords.append(line)\n",
     "\n",
     "print('We read in {0} bad passwords'.format(len(bad_passwords)))\n",
     "\n",
+    "# for each item found in the test_password list do the following\n",
     "for password in test_passwords:\n",
+    "    # if that item is in the bad_password list\n",
     "    if password in bad_passwords:\n",
     "        print('{0} is a bad password'.format(password))"
    ]
