--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -93,21 +93,9 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate list (not \"str\") to list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-7b3844a2a9a0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvar1\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'yoda'\u001b[0m \u001b[0;31m#but can you add a string to a list with + ?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: can only concatenate list (not \"str\") to list"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "var1 + 'yoda' #but can you add a string to a list with + ?"
+    "# var1 + 'yoda' #but can you add a string to a list with + ?"
    ]
   },
   {
@@ -127,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "['lulu', 'zeke', 'yoda']"
+       "['lulu', 'zeke', 'yoda', 'anakin', 'vader', 'yoda']"
       ]
      },
      "execution_count": 5,
@@ -136,8 +124,8 @@
     }
    ],
    "source": [
-    "var1.append('yoda')\n",
-    "var1"
+    "var2.append('yoda')\n",
+    "var2"
    ]
   },
   {
@@ -146,21 +134,10 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['yoda', 'zeke', 'lulu']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "var1.reverse()\n",
-    "var1"
+    "#var2.reverse()\n",
+    "#var2"
    ]
   },
   {
@@ -173,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "['zeke', 'lulu']"
+       "['lulu', 'zeke', 'anakin', 'vader', 'yoda']"
       ]
      },
      "execution_count": 7,
@@ -182,8 +159,8 @@
     }
    ],
    "source": [
-    "var1.remove('yoda')\n",
-    "var1"
+    "var2.remove('yoda')\n",
+    "var2"
    ]
   },
   {
@@ -204,7 +181,7 @@
     {
      "data": {
       "text/plain": [
-       "'anakin'"
+       "'vader'"
       ]
      },
      "execution_count": 8,
@@ -230,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -238,10 +215,10 @@
     {
      "data": {
       "text/plain": [
-       "['zeke', 'yoda', 'anakin', 'vader']"
+       "['zeke', 'anakin', 'vader', 'yoda']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,28 +226,6 @@
    "source": [
     "end_of_list = len(var2)\n",
     "var2[1:end_of_list]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['zeke', 'yoda', 'anakin', 'vader']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "var2[1:]"
    ]
   },
   {
@@ -292,12 +247,12 @@
     }
    ],
    "source": [
-    "var2[(len(var2)-2):(len(var2))]"
+    "var2[2:4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -305,16 +260,38 @@
     {
      "data": {
       "text/plain": [
-       "['anakin', 'vader']"
+       "['vader', 'yoda']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "var2[-2:]"
+    "var2[(len(var2)-2):(len(var2))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['zeke', 'anakin']"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var2[1:-2]"
    ]
   },
   {
