--- a/Lists and Dictionaries.ipynb
+++ b/Lists and Dictionaries.ipynb
@@ -297,6 +297,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D\n",
+      "V\n",
+      "Has an uppercase letter\n"
+     ]
+    }
+   ],
+   "source": [
+    "# And surprise! Python strings are actually lists of characters!\n",
+    "sith = 'Darth Vader'\n",
+    "for letter in sith:\n",
+    "    if letter.isupper():\n",
+    "        print(letter)\n",
+    "    \n",
+    "if any(letter.isupper() for letter in sith):\n",
+    "    print('Has an uppercase letter')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "collapsed": true
