--- a/Science Project.ipynb
+++ b/Science Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -19,10 +19,10 @@
      "output_type": "stream",
      "text": [
       "We read in 502 bad passwords to check against\n",
-      "checking password\n",
-      "this is an okay length\n",
-      "this is a known bad password\n",
-      "checking passwd7592\n",
+      "checking passWd9572\n",
+      "has a lowercase letter\n",
+      "has a uppercase letter\n",
+      "has a number\n",
       "this is an okay length\n",
       "this password is not known to be a bad password\n",
       "this password seems okay\n"
@@ -51,6 +51,16 @@
     "\n",
     "input_box = widgets.Text()\n",
     "\n",
+    "# make sure it has at least one uppercase,\n",
+    "# one lowercase, and one number\n",
+    "def check_password_characters(password):\n",
+    "    if any(char.islower() for char in password):\n",
+    "        print('has a lowercase letter')\n",
+    "    if any(char.isupper() for char in password):\n",
+    "        print('has a uppercase letter')\n",
+    "    if any(char.isdigit() for char in password):\n",
+    "        print('has a number')\n",
+    "\n",
     "def has_repeating_numbers(password):\n",
     "    return True\n",
     "\n",
@@ -78,6 +88,7 @@
     "# our main function called when we hit enter on the textbox\n",
     "def check_password(textbox):\n",
     "    print('checking {0}'.format(input_box.value))\n",
+    "    check_password_characters(input_box.value) \n",
     "    if good_passwd_length(input_box.value) is False:\n",
     "        return # we stop at this point\n",
     "    elif on_bad_password_list(input_box.value) is True:\n",
@@ -126,7 +137,7 @@
   },
   "widgets": {
    "state": {
-    "cf6bf846e0874c5ebe78fbc67f70d27c": {
+    "1f586d87095749008aac8f2d9151d6c1": {
      "views": [
       {
        "cell_index": 1
