--- a/Lists and Dictionaries.ipynb
+++ b/Lists and Dictionaries.ipynb
@@ -85,6 +85,7 @@
     }
    ],
    "source": [
+    "var_foo = [] # create a new empty list\n",
     "var2 = var1 + bar\n",
     "var2"
    ]
@@ -350,6 +351,7 @@
    "source": [
     "var2 = {'dog': 'Lassie'} # the key is 'dog', the value is a string, 'Lassie'\n",
     "var3 = {'devil': 'Zeke', 'saint': 'Lulu'} # you can have many keys in a dictionary\n",
+    "var3['devil'] # 'Zeke'\n",
     "pets = {'dogs': ['lulu', 'zeke'], 'birds': ['tweety', 'singsing'], 'number' : 7} # your values can be any valid python type"
    ]
   },
