--- a/Science Project.ipynb
+++ b/Science Project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -19,9 +19,10 @@
      "output_type": "stream",
      "text": [
       "We read in 502 bad passwords to check against\n",
-      "checking passWd9572\n",
+      "checking pjdgehtgndfg678\n",
+      "\n",
+      "g is used too many times\n",
       "has a lowercase letter\n",
-      "has a uppercase letter\n",
       "has a number\n",
       "this is an okay length\n",
       "this password is not known to be a bad password\n",
@@ -47,7 +48,7 @@
     "    # add our cleaned up line to the bad_passwords list\n",
     "    bad_passwords.append(line)\n",
     "\n",
-    "print('We read in {0} bad passwords to check against'.format(len(bad_passwords)))\n",
+    "print('We read in {0} known bad passwords used on the internet to check against'.format(len(bad_passwords)))\n",
     "\n",
     "input_box = widgets.Text()\n",
     "\n",
@@ -61,11 +62,16 @@
     "    if any(char.isdigit() for char in password):\n",
     "        print('has a number')\n",
     "\n",
-    "def has_repeating_numbers(password):\n",
-    "    return True\n",
-    "\n",
-    "def has_repeating_letters(password):\n",
-    "    return True\n",
+    "def has_repeating_numbers_or_letters(password, max_count):\n",
+    "    chars_dict = {} # creates new empty dictionary  ('p':1, 'a':1, 's': )\n",
+    "    for character in password: \n",
+    "        if character in chars_dict:\n",
+    "            chars_dict[character] += 1\n",
+    "        else:\n",
+    "            chars_dict[character] = 1 \n",
+    "    for key in chars_dict:\n",
+    "        if chars_dict[key] >= max_count:\n",
+    "            print(key, 'is used too many times')\n",
     "\n",
     "def on_bad_password_list(password):\n",
     "    known_password = True\n",
@@ -87,7 +93,8 @@
     "\n",
     "# our main function called when we hit enter on the textbox\n",
     "def check_password(textbox):\n",
-    "    print('checking {0}'.format(input_box.value))\n",
+    "    print('checking {0}\\n'.format(input_box.value))\n",
+    "    has_repeating_numbers_or_letters(input_box.value, 3)\n",
     "    check_password_characters(input_box.value) \n",
     "    if good_passwd_length(input_box.value) is False:\n",
     "        return # we stop at this point\n",
@@ -97,23 +104,17 @@
     "        print('this password seems okay')\n",
     "\n",
     "input_box.on_submit(check_password)\n",
-    "input_box\n",
-    "\n",
-    "# for each item found in the test_password list do the following\n",
-    "# for password in test_passwords:\n",
-    "#     # if that item is in the bad_password list\n",
-    "#     if password in bad_passwords:\n",
-    "#         print('{0} is a bad password'.format(password))"
+    "input_box\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# "
+   ]
   }
  ],
  "metadata": {
@@ -137,7 +138,7 @@
   },
   "widgets": {
    "state": {
-    "1f586d87095749008aac8f2d9151d6c1": {
+    "c3d4a12cda334d23ae7d0e72ed6bac27": {
      "views": [
       {
        "cell_index": 1
